Development
    libgmtk - gmtk_media_player, audio track selection fixes
    libgmtk - gmtk_media_player, initial subtitle and audio track detection
    libgmtk - gmtk_media_player, more hotkey processing
    libgmtk - gmtk_media_player, commit correct patch
    libgmtk - gmtk_media_player, handle +,-,#,., and j hotkeys
    libgmtk - gmtk_media_player, handle 1-8 keys for contrast, brightness, hue, and saturation
    libgmtk - gmtk_media_player, handle p and space keys for pausing
    libgmtk - gmtk_media_player, implement restart method
    libgmtk - gmtk_media_player, make subtitle selection work, and use better names in label
    libgmtk - gmtk_media_player, subtitle and audio_track work
    Fix up some issues with shoutcast stream information display
    libgmtk - gmtk_media_player, clamp values
    Fix view info, like view meter and view details
    Issue #467, playlist and details not disappearing
    Fix compile failure on fy.po, really dumb failure
    libgmtk - Dispose widgets properly, should solve memory leak
    libgmtk - gmtk_media_player, remove usage of GFileMonitor, not needed
    Fix window resize problem Issue #467 again
    libgmtk - gmtk_media_player, gamma is not a command line option
    libgmtk - gmtk_media_player, add video attributes
    Fix up spec file building
    When GSettings are available use them over GConf or GKeyStore
    Remove vdpau and vaapi vo devices on OpenBSD
    Use correct DVD device name on OpenBSD
    Add include to gmtk_media_player.h
    Add sndio and rtunes audio outputs for OpenBSD
    Add verbose flag to volume display
    Make volume on commandline work again
    Change volume range from 0 to 100 to 0.0 to 1.0 internally makes volume widget work
    Delete global varibles volume and idledata.volume
1.0.2
    Version Bump to 1.0.2
    Apply Patch for MpegURL playlists from Issue #491
    Apply Patch for NetBSD from Issue #490