@@ -1,4 +1,5 @@
 Development
+    libgmtk - gmtk_media_player, parse mplayer properties
     libgmtk - gmtk_media_player, audio track selection fixes
     libgmtk - gmtk_media_player, initial subtitle and audio track detection
     libgmtk - gmtk_media_player, more hotkey processing
